--- a/OOSU2Laboration2/Presentationslager/Presentation layer.csproj
+++ b/OOSU2Laboration2/Presentationslager/Presentation layer.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkapaBokning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SkapaBokning.Designer.cs">
+      <DependentUpon>SkapaBokning.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LogIn.resx">
       <DependentUpon>LogIn.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SkapaBokning.resx">
+      <DependentUpon>SkapaBokning.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
